# SpotActor

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: demo.yaml
environment/: environment.yml
scripts/: generate.py
spotactor/: __init__.py
spotactor/attention/: __init__.py  manipulator.py  processor.py
spotactor/pipeline/: __init__.py  spotactor_xl_pipeline.py
spotactor/utils/: __init__.py  adaptive_scheduler.py
