[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotactor"
version = "1.0.0"
description = "SpotActor: Training-Free Layout-Controlled Consistent Image Generation (AAAI 2025)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Jiahao Wang"},
    {name = "Caixia Yan"},
    {name = "Weizhan Zhang"},
    {name = "Haonan Lin"},
    {name = "Mengmeng Wang"},
    {name = "Guang Dai"},
    {name = "Tieliang Gong"},
    {name = "Hao Sun"},
    {name = "Jingdong Wang"},
]
keywords = ["diffusion", "image-generation", "consistency", "layout-guidance", "stable-diffusion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "diffusers>=0.25.0",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "Pillow>=9.5.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/JoHnneyWang/SpotActor"
Repository = "https://github.com/JoHnneyWang/SpotActor"
Paper = "https://arxiv.org/abs/2409.04801"

[tool.setuptools.packages.find]
include = ["spotactor*"]
